# clockwork

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  LAUNCH_CONTENT.md  LICENSE  README.md  changes.txt  export_codebase.py  pyproject.toml  pyrightconfig.json
.clockwork/: index.db
buildguide/: clockwork_codeflow.md  (+18 more)
clockwork/clockwork_project/clockwork-src/: .gitignore  CHANGELOG.md  README.md  _patch.tmp  help.txt  pyproject.toml  pytest_all_fails.txt  pytest_fail.txt
clockwork/clockwork_project/clockwork-src/clockwork/: mcp_server.py
clockwork/clockwork_project/clockwork-src/clockwork/agent/: registry.py  runtime.py
clockwork/clockwork_project/clockwork-src/clockwork/agents/: agent_registry.py  load_balancer.py  router.py  runtime.py  task_graph.py  task_queue.py
clockwork/clockwork_project/clockwork-src/clockwork/brain/: brain.py  optimization_engine.py  planning_engine.py  prioritization.py  summarizer.py
clockwork/clockwork_project/clockwork-src/docs/: governance.md  mcp-integration.md  troubleshooting.md  worktrees.md
clockwork/clockwork_project/clockwork-src/tests/: test_cli.py  test_cli_new_commands.py  test_generate.py  test_git_diff.py  test_ide_generator.py  test_mcp_server.py  test_new_features_sync.py  test_packaging.py  test_registry.py  test_security.py  test_v2_improvements.py  test_v2_remaining_suite.py
clockwork_project/clockwork-src/: README.md  pyproject.toml
clockwork_project/clockwork-src/.clockwork/: agent_history.json  config.yaml  context.yaml  handoff_log.json  knowledge_graph.db  repo_map.json  rules.md  tasks.json
clockwork_project/clockwork-src/.clockwork/handoff/: handoff.json  next_agent_brief.md
clockwork_project/clockwork-src/clockwork/agent/: models.py  registry.py  router.py
clockwork_project/clockwork-src/clockwork/brain/: __init__.py  base.py  brain_manager.py  external_brain.py  minibrain.py  ollama_brain.py
clockwork_project/clockwork-src/clockwork/cli/: __init__.py  app.py  cmd_graph.py  cmd_handoff.py  cmd_init.py  cmd_load.py  cmd_pack.py  cmd_plugin.py  cmd_scan.py  cmd_update.py  cmd_verify.py  main.py
clockwork_project/clockwork-src/clockwork/context/: __init__.py  context_engine.py  engine.py  initializer.py  models.py  schema.py
clockwork_project/clockwork-src/clockwork/graph/: graph_engine.py  queries.py  storage.py
clockwork_project/clockwork-src/clockwork/handoff/: __init__.py  aggregator.py  logger.py  models.py
clockwork_project/clockwork-src/clockwork/index/: __init__.py  incremental_scanner.py  index_engine.py  models.py  watcher.py
clockwork_project/clockwork-src/clockwork/packaging/: checksum.py  cli_commands.py  loader.py  models.py  packaging_engine.py  packer.py
clockwork_project/clockwork-src/clockwork/registry/: __init__.py  cache.py  registry_engine.py
clockwork_project/clockwork-src/clockwork/rules/: engine.py  models.py  rule_engine.py
clockwork_project/clockwork-src/clockwork/scanner/: filters.py  models.py  repository_scanner.py  scanner.py  symbols.py
clockwork_project/clockwork-src/clockwork/security/: __init__.py  file_guard.py  models.py  scanner.py  security_engine.py
clockwork_project/clockwork-src/tests/: test_brain.py  test_cli.py  test_index.py  test_packaging.py  test_rules.py
(+286 files in other folders)
